crates/daemon/tests/snapshots/project_env_reconciliation__resource_only_project_uses_custom_env_file_and_no_php_worker.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "summary": String("Project env rendered"),
            "type": String("job_completed"),
        },
    ],
    ProjectRecord {
        id: "<project_id>",
        slug: "resource-project",
        mode: ResourceOnly,
        path: "<tempdir>/Resource Project",
        original_path: "<tempdir>/Resource Project",
        primary_hostname: None,
        config_path: "<tempdir>/Resource Project/pv.yml",
        desired_php_track: Some(
            "8.4",
        ),
        php_runtime: ProjectPhpRuntimeRecord {
            track: Some(
                "8.4",
            ),
            requested_extensions: [],
            loaded_extensions: [],
            ignored_extensions: [],
        },
        created_at: "<timestamp>",
        updated_at: "<timestamp>",
    },
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Rendered,
            message: Some(
                "rendered Project env",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
)
