crates/daemon/tests/snapshots/project_env_reconciliation__root_only_env_rendering_writes_dotenv_and_records_rendered_state.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "summary": String("Project env rendered"),
            "type": String("job_completed"),
        },
    ],
    "# >>> PV MANAGED\nAPP_NAME=acme\nAPP_URL=https://acme.test\nPV_TLS_CA=<tempdir>/home/.pv/certificates/ca.pem\nVITE_DEV_SERVER_CERT=<tempdir>/home/.pv/certificates/projects/<project_id>/tls.crt\nVITE_DEV_SERVER_KEY=<tempdir>/home/.pv/certificates/projects/<project_id>/tls.key\n# <<< PV MANAGED\n",
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Rendered,
            message: Some(
                "rendered Project env",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
    [
        JobRecord {
            id: "job_000002",
            kind: "reconcile",
            scope: "project:<project_id>",
            status: Succeeded,
            started_at: "<timestamp>",
            finished_at: Some(
                "<timestamp>",
            ),
            summary: Some(
                "Project env rendered",
            ),
            error: None,
        },
    ],
)
