crates/daemon/tests/snapshots/project_env_reconciliation__seeded_resource_and_allocation_contexts_render_dotenv.snap
---
source: crates/daemon/tests/project_env_reconciliation.rs
expression: snapshot
---
(
    [
        Object {
            "job_id": String("job_000002"),
            "message": String("job accepted"),
            "protocol_version": Number(3),
            "status": String("accepted"),
            "type": String("response"),
        },
        Object {
            "job_id": String("job_000002"),
            "kind": String("reconcile"),
            "scope": String("project:<project_id>"),
            "type": String("job_started"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("Project env reconciliation started"),
            "type": String("log"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("resources"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("project_apply"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("workers"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("gateway"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "message": String("finalization"),
            "type": String("progress"),
        },
        Object {
            "job_id": String("job_000002"),
            "summary": String("Project env rendered"),
            "type": String("job_completed"),
        },
    ],
    Some(
        "# >>> PV MANAGED\nDATABASE_URL=postgres://root:secret@127.0.0.1:3306/acme_test_app_db\nDB_DATABASE=acme_test_app_db\nDB_HOST=127.0.0.1\nDB_PORT=3306\nDB_USERNAME=root\n# <<< PV MANAGED\n",
    ),
    [
        ProjectManagedResourceRecord {
            project_id: "<project_id>",
            resource_name: "postgres",
            track: "8.0",
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    [
        ResourceAllocationRecord {
            id: "allocation_000001",
            project_id: "<project_id>",
            resource_name: "postgres",
            track: "8.0",
            allocation_name: "app-db",
            generated_name: "acme_test_app_db",
            env: {
                "database": "acme_test_app_db",
            },
            status: Ready,
            created_at: "<timestamp>",
            updated_at: "<timestamp>",
        },
    ],
    Some(
        ProjectEnvObservedStateRecord {
            project_id: "<project_id>",
            status: Rendered,
            message: Some(
                "rendered Project env",
            ),
            observed_at: "<timestamp>",
            warnings: [],
        },
    ),
    JobRecord {
        id: "job_000002",
        kind: "reconcile",
        scope: "project:<project_id>",
        status: Succeeded,
        started_at: "<timestamp>",
        finished_at: Some(
            "<timestamp>",
        ),
        summary: Some(
            "Project env rendered",
        ),
        error: None,
    },
)
